# aas-hack

./: .env.example  .gitignore  .gitmodules  CUSTOM_UI_CONTEXT.md  CUSTOM_UI_PLAN.md  README  README.md  SCRIPTS.md  aas_client.py  copy_shell.py  docker-compose.yml  download_shell.py  find_and_download_shell.py  join.py  register_remote.py  setup_local_ip.py  test.py  test2.py
_files/: aas-registry.yml  aas-registry.yml.template  sm-registry.yml  sm-registry.yml.template  vault_init.sh
aas/: aas.json
aas-cli/: README.md  productA.json  pyproject.toml  servers.example.yaml
aas-cli/aas_cli/: auth.py  client.py  config.py
aas-upload-gateway/: Dockerfile  upload_proxy.py
basyx-infra.yml/: basyx-infra.yml
converters/excel-to-aasx/: Makefile  pyproject.toml
converters/excel-to-aasx/configs/formats/: idta-schunk-workbook.json
converters/excel-to-aasx/docs/: limitations.md
converters/excel-to-aasx/excel_to_aasx/: transform.py  validate.py
converters/excel-to-aasx/scripts/: run-stage.sh
converters/excel-to-aasx/tests/: test_company_config.py  test_validate.py
data/: EGU 50-IL-M-B.xlsx
docs/: public-live-data-and-mqtt.md
dpp-public-api/: Dockerfile  README.md  public_dpp.py
dpp-web-ui/: .dockerignore  .env.example  Dockerfile  README.md  index.html  package-lock.json  vite.config.ts
excel-to-aasx/: .gitignore  .gitmodules  README.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
keycloak-registry/: aas-registry.yml  sm-registry-rbac.json
mqtt-integration/: README.md
nginx/: nginx.conf  nginx.conf.template
(+135 files in other folders)
