[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aas-cli"
version = "0.1.0"
description = "CLI to upload/download/delete/list AAS shells and submodels on any BaSyx server (your own or a partner's) over its REST API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31,<3",
  "PyYAML>=6,<7",
  # urllib3>=2 warns loudly on macOS's LibreSSL-linked system Python.
  "urllib3<2",
]

[project.scripts]
aas-cli = "aas_cli.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["aas_cli*"]
